--- a/packages.config
+++ b/packages.config
@@ -2,4 +2,7 @@
 <packages>
   <package id="InputInterceptor" version="1.0.7" targetFramework="net472" />
   <package id="Nefarius.ViGEm.Client" version="1.17.178" targetFramework="net472" />
+  <package id="Newtonsoft.Json" version="12.0.3" targetFramework="net472" />
+  <package id="obs-websocket-dotnet" version="4.8.1" targetFramework="net472" />
+  <package id="WebSocketSharp-netstandard" version="1.0.1" targetFramework="net472" />
 </packages>
